fixes nav bar alignment

--- a/server/public/assets/styles/sass/main.scss
+++ b/server/public/assets/styles/sass/main.scss
@@ -28,14 +28,14 @@ $buttonColor: $green;
 $buttonDark: darken($green, 10%);
 $buttonDarker: darken($buttonDark, 10%);
 
-button {
+button{
   background: $green;
   border-radius: 3px;
   // box-shadow: 0px 5px 0px $buttonDark;
   border: 0;
   color: white;
   font-size: 17px;
-  padding: 10px 30px;
+  padding: 10px 1%;
   display: inline-block;
   outline: 0;
   &:hover {
@@ -50,6 +50,12 @@ button {
     top: 2px;
     // margin-top: 5px;
   }
+}
+
+.button {
+  @extend button;
+  display: block;
+  float: left;
 }
 
 body {
@@ -89,16 +95,13 @@ body {
 
 .nav {
   margin-bottom: 20px;
-  border-bottom: 1px solid $brown;
   a {
-    // width: (100% / 3);
-  }
-  button {
-    width: (100% / 3);
+    width: (100% / 3 - 2%);
     border-radius: 0;
     margin: 0;
     box-shadow: none;
     opacity: 0.95;
+    border-bottom: 1px solid $brown;
   }
 }
 img.bg {
